fixed: spacing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -153,8 +153,8 @@ blockquote {
 		}
 		p {
 			font-size: 1em;
-			line-height: 150%;
-			margin-bottom: 15px;
+			line-height: 110%;
+			margin-bottom: 40px;
 		}
 		a {
 			padding-bottom: 1px;
